src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Converted_to_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(ListPrice=0,NULL,(ListPrice-UnitPrice)/ListPrice)</formula>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>License_Entity__c</fullName>
        <label>License Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LineItemID__c</fullName>
        <formula>Id</formula>
        <label>LineItemID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_ID__c</fullName>
        <formula>PricebookEntryId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricebook ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Maintenance_Split__c</fullName>
        <formula>IF(CONTAINS(TEXT(PricebookEntry.Product2.Family),&quot;Maintenance&quot;),IF(TEXT(Opportunity.Type)=&quot;Maintenance Renewal&quot;,&quot;Maintenance (Renewal)&quot;,&quot;Maintenance (New)&quot;),TEXT(PricebookEntry.Product2.Family))</formula>
        <label>Product Family (Maintenance Split)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Text__c</fullName>
        <label>Product Name (Text)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity_Type__c</fullName>
        <label>Quantity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cores</fullName>
                </value>
                <value>
                    <fullName>Sockets</fullName>
                </value>
                <value>
                    <fullName>VMs</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>ListPrice*Quantity</formula>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Formula__c</fullName>
        <description>Native Total Price field pulls in Amount if no products are present on the opp (this field does not)</description>
        <formula>UnitPrice*Quantity</formula>
        <label>Total Price (Formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Price__c</fullName>
        <formula>UnitPrice*Quantity</formula>
        <label>Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Revenue__c</fullName>
        <description>Copy of the Training Revenue field on the Asset Object to be accessible from a products report requested by Angus</description>
        <formula>IF( CONTAINS( Product_Name_Text__c, &quot;Training&quot; ), Total_Sales_Price__c, 
IF( CONTAINS( Product_Name_Text__c, &quot;RAPID Success&quot; ), Total_Sales_Price__c/2 , 
0))</formula>
        <label>Training Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Error_Perm_Products_on_sub_50_Soc_Opps</fullName>
        <active>false</active>
        <errorConditionFormula>AND(CONTAINS(Product2.ProductCode,&quot;PERM&quot;), Opportunity.of_CPU_Sockets__c&lt;=50,
OR(ISPICKVAL(Opportunity.StageName,&quot;Identify&quot;),
   ISPICKVAL(Opportunity.StageName,&quot;Pipeline&quot;),
   ISPICKVAL(Opportunity.StageName,&quot;Upside&quot;),
   ISPICKVAL(Opportunity.StageName,&quot;Strong Upside&quot;),
   ISPICKVAL(Opportunity.StageName,&quot;Commit&quot;),
   ISPICKVAL(Opportunity.StageName,&quot;PO Received&quot;)),
Opportunity.CloseDate&gt; DATE(2015,1,12),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
$UserRole.Name&lt;&gt;&quot;CFO&quot;)</errorConditionFormula>
        <errorMessage>Not allowed to have a Perm license on any opportunity at or under 50 sockets</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Product_Changes</fullName>
        <active>true</active>
        <description>Only Finance and Ops should have the ability to modify Opportunity Products</description>
        <errorConditionFormula>AND( 
$UserRole.Name&lt;&gt;&quot;CFO&quot;, 
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>Opportunity Products should only be modified by Finance. Please reach out to finance@turbonomic.com if you need to make any changes on the opportunity products.</errorMessage>
    </validationRules>
</CustomObject>